# isa-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  auth_file  popcl.c
src/: ArgumentsParser.cpp  ArgumentsParser.hpp  MessagesReceiver.cpp  MessagesReceiver.hpp  MessagesRetriever.cpp  MessagesRetriever.hpp  popcl.cpp  popcl.hpp
